# SRM_Sys_Analitics

./: README.md
.github/workflows/: python-package.yml
SRM_Sys_Analisis/: pyproject.toml
SRM_Sys_Analisis/examples/: procurements.csv  procurements.json  rules_ontology.json
SRM_Sys_Analisis/outputs/: report.json
SRM_Sys_Analisis/src/srm/: __init__.py  cli.py  logging_config.py
SRM_Sys_Analisis/src/srm/agents/: __init__.py  base.py  detectors.py  violation_agent.py
SRM_Sys_Analisis/src/srm/api/: __init__.py  app.py
SRM_Sys_Analisis/src/srm/data/: __init__.py  loader.py  models.py
SRM_Sys_Analisis/src/srm/logic/: __init__.py  analyzers.py  charts.py  console_output.py  report.py  violations.py
SRM_Sys_Analisis/src/srm/ontology/: __init__.py  loader.py  models.py
SRM_Sys_Analisis/src/srm_ontology_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
SRM_Sys_Analisis/tests/: test_analysis.py  test_loader.py
SRM_Sys_Analisis/tools/: generate_word_report.py
experiment7/: report_task7.json
experiment7/tables/: table_budget_tolerance.csv  table_missing_rates.csv  table_runtime.csv
